Fixed issue on Firefox where spaces in emeter disappeared

--- a/css/emeter.css
+++ b/css/emeter.css
@@ -18,3 +18,8 @@ div.tlx {
 padding-bottom: 3em;
 }
 
+#text {
+  white-space: pre-wrap;
+  word-wrap: normal;
+  overflow-x: scroll;
+}
